--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -35,8 +35,12 @@ roof,page {
 	flex-direction: column;
 }
 
-roof, etage{
-	margin: .5rem;
+etage{
+	margin: 2rem .5rem;
+}
+
+roof {
+    margin: 0.5rem;
 }
 
 roof	{
@@ -220,5 +224,5 @@ button.tgmain {
 	font-size: 1.25em;
 	margin: 0;
 	border-radius: 0;
-	margin-top: 1em;
+	/* margin-top: 1em; */
 }
