--- a/samples/poputka/colors-tg.css
+++ b/samples/poputka/colors-tg.css
@@ -40,9 +40,14 @@ roof, page>ul>li{
 	/* border-radius: .5em; */
 }
 
-button, tab.selected, .swap{
-	color: var(--tg-theme-button-text-color);
+button, .swap{
 	background-color: var(--tg-theme-button-color);
+	color: var(--tg-theme-button-text-color);
+}
+
+tab.selected{
+	color: var(--tg-theme-button-text-color);
+	background-color: var(--tg-theme-bg-color);
 }
 
 tabset{
@@ -50,7 +55,7 @@ tabset{
 }
 
 page {
-	border-bottom: 1px solid var(--tg-theme-button-color);
+	/* border-bottom: 1px solid var(--tg-theme-button-color); */
 	background: var(--tg-theme-bg-color);
 	padding: .5em;
 }
