--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -74,7 +74,7 @@ page>ul>li{
 	max-width: 100%;
 	overflow: hidden;
 	position: relative;
-	padding: .5em 1em;
+	padding: .5em;
 	margin: .5em 0;
 }
 
