--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -74,8 +74,8 @@ page>ul>li{
 	max-width: 100%;
 	overflow: hidden;
 	position: relative;
-	padding: .5em;
-	margin: .5em 0;
+	padding: 1em .5em;
+	/* margin: 1em 0; */
 }
 
 
@@ -134,7 +134,7 @@ form>label {
 }
 
 form>button{
-	font-size: 1.25em;
+	/* font-size: 1.25em; */
 	margin-top: 1em;
 	display: block;
 	width: 100%;
