--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -227,3 +227,15 @@ button.tgmain {
 	border-radius: 0;
 	margin-top: 1em;
 }
+
+page::after {
+    content: "-";
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    /* width: 100%; */
+    background: linear-gradient(0, var(--tg-theme-bg-color), transparent);
+    height: 4em;
+    display: block;
+    color: var(--tg-theme-bg-color);
+}
