--- a/samples/poputka/tg.css
+++ b/samples/poputka/tg.css
@@ -47,6 +47,9 @@ roof {
 roof	{
 	/* padding: .5em; */
 	gap: 1em;
+	background: rgba(var(--shade-color),.1);
+	padding: 1em;
+	/* margin: -1em; */
 }
 
 roof::before {
@@ -57,6 +60,7 @@ etage {
 	flex: 1;
 	height: 100%;
 	overflow: auto;
+	padding: 1em;
 }
 
 page {
